Assignment2_Zhao_Duo/tests/automated/tests/good/ScientificNotationBigBlandTabs.calc
a	.0E23	b	1.E25	c	2.3E31	d	34.5E45	e	6.78E73	f	99.99E56	g	3E93	h	76E45	.0E23	1.E25	2.3E31	34.5E45	6.78E73	99.99E56	3E93	76E45	a	.0E2	b	1.E2	c	2.3E3	d	34.5E4	e	6.78E7	f	99.99E5	g	3E9	h	76E4	.0E2	1.E2	2.3E3	34.5E4	6.78E7	99.99E5	3E9	76E4	