Assignment2_Zhao_Duo/tests/automated/tests/bad/ScientificNotationBigBlandWithBadCharacters-9.calc
a .0%E2 b 1.%E2 c 2.3%E3 d 34.5%E4 e 6.78%E7 f 99.99%E5 g 3%E9 h 76%E4
